-fix color del nav toggler - ahora es visible.

--- a/css/style.css
+++ b/css/style.css
@@ -248,3 +248,6 @@ fieldset{
 .img{
     border-radius: 12px;
 }
+.navB{
+    background-color: #3A506B;
+}
